--- a/_posts/2024-05-12-Forest.md
+++ b/_posts/2024-05-12-Forest.md
@@ -122,12 +122,30 @@ Host script results:
 Nmap done: 1 IP address (1 host up) scanned in 75.74 seconds
 ```
 
+<!-- markdownlint-capture -->
+<!-- markdownlint-disable -->
 > [!faq]- Rustscan Command Breakdown
 > - `-a 10.10.10.161`: Specifies the target IP address.
 > - `-t 1500`: Sets the timeout to 1500 milliseconds.
 > - `-u 7000`: Sets the maximum number of concurrent open file descriptors (ulimits).
 > - `-- -A -sC`: Flags passed to Nmap after RustScan completes. -A enables OS detection, version detection, script scanning, and traceroute. -sC runs default scripts.
 
+
+> An example showing the `tip` type prompt.
+{: .prompt-tip }
+
+> - `-a 10.10.10.161`: Specifies the target IP address.
+> - `-t 1500`: Sets the timeout to 1500 milliseconds.
+> - `-u 7000`: Sets the maximum number of concurrent open file descriptors (ulimits).
+> - `-- -A -sC`: Flags passed to Nmap after RustScan completes. -A enables OS detection, version detection, script scanning, and traceroute. -sC runs default scripts.
+{: .prompt-info }
+
+> An example showing the `warning` type prompt.
+{: .prompt-warning }
+
+> An example showing the `danger` type prompt.
+{: .prompt-danger }
+<!-- markdownlint-restore -->
 
 # SMB Enumeration
 
