final commit for the night

--- a/_posts/2024-05-12-Forest.md
+++ b/_posts/2024-05-12-Forest.md
@@ -7,8 +7,12 @@ categories: [HTB, HTB-Easy]
 tags: [windows, forest, active directory, NetExec, PowerView, evilwinrm, hashcat, kdc, asreproast, rustscan, ]
 ---
 
+# Introduction
 
-# Nmap
+< placeolder >
+
+
+# Enumeration
 
 I started by running an portscan to determine what ports are open and services running behind them. In my case, I used [rustscan](https://github.com/RustScan/RustScan) , a modern port scanner that to be fast and efficient. (*It can scan all 65k ports in 3 seconds.😎* )
 
