fixed minor issues

--- a/_posts/2024-05-12-Forest.md
+++ b/_posts/2024-05-12-Forest.md
@@ -4,8 +4,16 @@ title: "Forest"
 date: 2024-05-12
 image: ../../assets/img/Posts/fawn.png
 categories: [HTB, HTB-Easy]
-tags: [windows, forest, active directory, NetExec, PowerView, evilwinrm, hashcat, kdc, asreproast, rustscan, ]
+tags: [windows, forest, active directory, NetExec, PowerView, EvilWinRM, hashcat, kdc, asreproast, rustscan, Wmiexec, Psexec, nxc, DCSync, mimikatz, secretsdump, Exchange, WriteDacl, GenericAll, BloodHound, SharpHound, WinRM, 18200, GetNPUsers, preauthentication, AS-REP roasting, TGT, KDC, ldapsearch, Windapsearch, rpcclient, Enum4Linux, Kerberos]
 ---
+
+
+| MACHINE         | [Forest](https://app.hackthebox.com/machines/Forest)                                                                              |
+| --------------- | ----------------------------------------------------------------------------------------------------------------------------- |
+| MACHINE CREATOR | [egre55](https://app.hackthebox.com/users/1190) & [mrb3n](https://app.hackthebox.com/users/2984) |
+| DIFFICULTY      | Easy                                                                                                                        |
+| MACHINE IP      | 10.10.10.161                                                                                                                 |
+
 
 # Introduction
 
@@ -152,8 +160,8 @@ From the nmap results, I was able identify that this target could potentially be
 
 For more Info on AD related ports:
 
-[*List of Ports required for Active Directory and PKI* - **Encryption Consulting** ](https://www.encryptionconsulting.com/ports-required-for-active-directory-and-pki/)
-[*All required Domain Controller Ports* - **LazyAdmins**](https://lazyadmin.nl/it/domain-controller-ports/)
+- [*List of Ports required for Active Directory and PKI* - **Encryption Consulting** ](https://www.encryptionconsulting.com/ports-required-for-active-directory-and-pki/)
+- [*All required Domain Controller Ports* - **LazyAdmins**](https://lazyadmin.nl/it/domain-controller-ports/)
 
 ----
 
@@ -840,7 +848,7 @@ Eg:
 
 ### ldapsearch
 
-> *ldapsearch opens a connection to an LDAP server, binds, and performs a search using specified parameters. *
+> *ldapsearch opens a connection to an LDAP server, binds, and performs a search using specified parameters.*
 
 ```bash
 # Format
@@ -908,9 +916,11 @@ Anyway, since the user is asreproastable, let me recap a little on this attack b
 
 **Image Credits**: *[Red Team Notes](https://www.ired.team/offensive-security-experiments/active-directory-kerberos-abuse/as-rep-roasting-using-rubeus-and-hashcat)*
 
-`Kerberos pre-authentication` is a security feature designed to protect against offline password-guessing attacks. When enabled (_which is the default setting in Active Directory_), the user must prove their identity before the `Key Distribution Center (KDC)` issues a `Ticket Granting Ticket (TGT)`. This is typically done by sending a timestamp encrypted with the user's password hash. For visual learners refer:
+`Kerberos pre-authentication` is a security feature designed to protect against offline password-guessing attacks. When enabled (_which is the default setting in Active Directory_), the user must prove their identity before the `Key Distribution Center (KDC)` issues a `Ticket Granting Ticket (TGT)`. This is typically done by sending a timestamp encrypted with the user's password hash. For visual learners:
 
 <blockquote class="twitter-tweet" data-media-max-width="560"><p lang="en" dir="ltr">How AS-REP Roasting works. 🔐<br><br>This animation demonstrates the more secure Kerberos pre-auth and contrasts it with an AS-REP roasting attack which abuses the &#39;Do not require Kerberos preauthentication&#39; setting. <a href="https://twitter.com/hashtag/ThreatHunting?src=hash&amp;ref_src=twsrc%5Etfw">#ThreatHunting</a> <a href="https://twitter.com/hashtag/DFIR?src=hash&amp;ref_src=twsrc%5Etfw">#DFIR</a> <a href="https://t.co/srkLROA23W">pic.twitter.com/srkLROA23W</a></p>&mdash; ACE Responder (@ACEResponder) <a href="https://twitter.com/ACEResponder/status/1698089715600085262?ref_src=twsrc%5Etfw">September 2, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+**Video Credits**: *[ACEResponder](https://twitter.com/ACEResponder/status/1698089715600085262)*
 
 
 If an account is configured to not require Kerberos pre-authentication ("`Do not require Kerberos preauthentication`" option in the user account properties), it becomes vulnerable to `AS-REP roasting`. 
@@ -949,7 +959,7 @@ impacket-GetNPUsers htb.local/ -request -usersfile users.txt -format hashcat -dc
 eg:
 
 ```bash
-➜  Forest impacket-GetNPUsers htb.local/ -request -usersfile users.txt -format hashcat -dc-ip 10.10.10.161
+➜  impacket-GetNPUsers htb.local/ -request -usersfile users.txt -format hashcat -dc-ip 10.10.10.161
 
 Impacket v0.11.0 - Copyright 2023 Fortra
 
@@ -986,7 +996,7 @@ Moving on to hashcat, you need to identify the right mode to use in cracking the
   18200 | Kerberos 5, etype 23, AS-REP                               | Network Protocol
 ```
 
-Here you want to focus on the last option on the list `18200`, which as you can see is for the AS-REP type. proceed to crack as follows:
+Here you want to focus on the last option on the list `18200`, which as you can see is for the AS-REP type. Proceed to crack as follows:
 
 ```bash
 ➜  hashcat -m 18200 TGT.txt ~/Desktop/rockyou.txt 
@@ -1055,8 +1065,6 @@ Session completed.
 ## WinRM Access
 
 We now have the user's password: `svc-alfresco:s3rvice` and the possibilities could be endless at this point 😎.
-
-![Elmo](https://tenor.com/view/excited-fuego-gif-26833875)
 
 Using [NetExec's](https://www.netexec.wiki/winrm-protocol/authentication) winrm feature, we can test if the creds actually work. (*Expected result should have `Pwn3d`*)
 
