Changed blog logo

--- a/_posts/2024-05-12-Forest.md
+++ b/_posts/2024-05-12-Forest.md
@@ -2,7 +2,7 @@
 layout: post
 title: "Forest"
 date: 2024-05-12
-image: ../../assets/img/Posts/fawn.png
+image: ../../assets/img/Posts/forest.png
 categories: [HTB, HTB-Easy]
 tags: [windows, forest, active directory, NetExec, PowerView, EvilWinRM, hashcat, kdc, asreproast, rustscan, Wmiexec, Psexec, nxc, DCSync, mimikatz, secretsdump, Exchange, WriteDacl, GenericAll, BloodHound, SharpHound, WinRM, 18200, GetNPUsers, preauthentication, AS-REP roasting, TGT, KDC, ldapsearch, Windapsearch, rpcclient, Enum4Linux, Kerberos]
 ---
@@ -17,7 +17,11 @@ tags: [windows, forest, active directory, NetExec, PowerView, EvilWinRM, hashcat
 
 # Introduction
 
-< placeolder >
+Hey there and welcome to my blog post where i'll be doing an in-depth walkthrough of the `Forest` machine on HTB. This is an easy, beginner friendly active directory machine that can help you practice and exploit attacks such as ASREP-Roasting & DCSync attack. I've played this machine a couple of times before and as I was helping my stuck friend, I figured I could make some small notes and share with the community.
+
+# TL;DR ?
+
+![easy](../../assets/img/Posts/TLDR-FOREST.png)
 
 
 # Enumeration
@@ -144,7 +148,7 @@ Nmap done: 1 IP address (1 host up) scanned in 75.74 seconds
 
 From the nmap results, I was able identify that this target could potentially be a `Domain Controller`.
 
-> *A domain controller is a server that responds to security authentication requests within a computer network domain. It is a network server that is responsible for allowing host access to domain resources. It authenticates users, stores user account information and enforces security policy for a domain.* ~Source: [Wikipedia](https://en.wikipedia.org/wiki/Domain_controller)
+> *A domain controller is a Windows server that has Active Directory Domain Services (AD DS) installed and has been promoted to a domain controller in the forest.
 
 
 **Thought Process:**
@@ -1626,3 +1630,58 @@ impacket-wmiexec -dc-ip htb.local -hashes aad3b435b51404eeaad3b435b51404ee:32693
 *Wmiexec*
 
 ![image](https://gist.github.com/assets/58165365/a891c61d-9d30-4503-8736-a272dde4c121)
+
+
+
+<style>
+.callout {
+  border-radius: 5px;
+  padding: 15px;
+  margin: 20px 0;
+  color: white;
+}
+.callout-tip {
+  background-color: #2d6a4f;
+}
+.callout-info {
+  background-color: #1d3557;
+}
+.callout-warning {
+  background-color: #a68a00;
+}
+.callout-danger {
+  background-color: #8d0202;
+}
+</style>
+
+<div class="callout callout-tip">
+  <strong>Tip:</strong> An example showing the <code>tip</code> type prompt.
+</div>
+
+<div class="callout callout-info">
+  <strong>Info:</strong> An example showing the <code>info</code> type prompt.
+</div>
+
+<div class="callout callout-warning">
+  <strong>Warning:</strong> An example showing the <code>warning</code> type prompt.
+</div>
+
+<div class="callout callout-danger">
+  <strong>Danger:</strong> An example showing the <code>danger</code> type prompt.
+</div>
+
+
+<!-- markdownlint-capture -->
+<!-- markdownlint-disable -->
+> An example showing the `tip` type prompt.
+{: .prompt-tip }
+
+> An example showing the `info` type prompt.
+{: .prompt-info }
+
+> An example showing the `warning` type prompt.
+{: .prompt-warning }
+
+> An example showing the `danger` type prompt.
+{: .prompt-danger }
+<!-- markdownlint-restore -->
